force-app/main/default/objects/Apttus__IDEJobClauseExtraction__c/Apttus__IDEJobClauseExtraction__c.object-meta.xml
<CustomObject>
    <description>Holds one or more clause related information received from the IDE Provider (e.g. KIRA)</description>
    <label>IDE Job Clause Extraction</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Job Clause Extractions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>