force-app/main/default/objects/Apttus__IDEJobClauseExtraction__c/fields/Apttus__ClauseHeader__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClauseHeader__c</fullName>
    <description>The clause header text</description>
    <inlineHelpText>The clause header text</inlineHelpText>
    <label>Clause Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>