force-app/main/default/objects/Apttus__IDEJobClauseExtraction__c/fields/Apttus__ClauseId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClauseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated clause</description>
    <inlineHelpText>ID of the associated clause</inlineHelpText>
    <label>Clause</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipLabel>IDE Job Clause Extractions</relationshipLabel>
    <relationshipName>IDEJobClauseExtractions</relationshipName>
    <type>Lookup</type>
</CustomField>