force-app/main/default/objects/Apttus__IDEJobClauseExtraction__c/fields/Apttus__FieldNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FieldNumber__c</fullName>
    <description>The IDE field number</description>
    <inlineHelpText>The IDE field number</inlineHelpText>
    <label>Field Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>