force-app/main/default/objects/Apttus__IDEJobClauseExtraction__c/fields/Apttus__IDEJobId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IDEJobId__c</fullName>
    <description>ID of the associated job</description>
    <inlineHelpText>ID of the associated job</inlineHelpText>
    <label>IDE Job</label>
    <referenceTo>Apttus__IDEJob__c</referenceTo>
    <relationshipLabel>IDE Job Clause Extractions</relationshipLabel>
    <relationshipName>IDEJobClauseExtractions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>