force-app/main/default/objects/Apttus__IDEJobClauseExtraction__c/fields/Apttus__PatternSimilarity__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PatternSimilarity__c</fullName>
    <description>The pattern similarity for use by the refactoring algorithm</description>
    <inlineHelpText>The pattern similarity for use by the refactoring algorithm</inlineHelpText>
    <label>Pattern Similarity</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>