force-app/main/default/objects/Apttus__IDEJobClauseExtraction__c/fields/Apttus__RefinedValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RefinedValue__c</fullName>
    <description>The refined value of the extracted data</description>
    <inlineHelpText>The refined value of the extracted data</inlineHelpText>
    <label>Refined Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>