force-app/main/default/objects/Apttus__IDEJobClauseExtraction__c/fields/Apttus__TextSimilarity__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TextSimilarity__c</fullName>
    <description>The text similarity for use by the refactoring algorithm</description>
    <inlineHelpText>The text similarity for use by the refactoring algorithm</inlineHelpText>
    <label>Text Similarity</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>